addFirst() method java version error corrected